--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "dependencies": {
     "@companieshouse/node-session-handler": "^4.1.6",
     "@companieshouse/structured-logging-node": "^1.0.4",
+    "axios": "^0.21.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "govuk-frontend": "^3.10.1",
     "helmet": "^4.2.0",
+    "http-errors": "^1.8.0",
     "ioredis": "^4.19.4",
     "nunjucks": "^3.2.2",
     "validator": "^13.5.2",
