--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "start": "node dist/app/server.js",
     "start:watch": "NODE_ENV=development nodemon",
     "build": "NODE_ENV=production tsc && cp -r src/views dist/app && gulp static",
-    "lint:check": "ts-standard",
-    "lint": "ts-standard --fix",
-    "test": "jest -c src/test/jest.config.js"
+    "lint": "eslint 'src/**/*.ts' 'test/**/*.ts'",
+    "lint:fix": "eslint 'src/**/*.ts' 'test/**/*.ts' --fix",
+    "test": "mocha --file './test/setup.ts' --require ts-node/register './test/**/*.spec.ts'",
+    "test:watch": "mocha --file './test/setup.ts' --require ts-node/register './test/**/*.spec.ts' --watch",
+    "test:coverage": "nyc npm test"
   },
   "keywords": [],
   "author": "",
@@ -30,21 +32,27 @@
     "yargs": "^16.2.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.14",
     "@types/express": "^4.17.9",
-    "@types/jest": "^26.0.19",
+    "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.14",
     "@types/nunjucks": "^3.1.3",
-    "@types/supertest": "^2.0.10",
-    "copyfiles": "^2.4.1",
+    "@types/sinon": "^9.0.9",
+    "@types/sinon-chai": "^3.2.5",
+    "@types/yargs": "^15.0.12",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
+    "chai": "^4.2.0",
+    "eslint": "^7.16.0",
     "gulp": "^4.0.2",
     "gulp-sass": "^4.1.0",
-    "jest": "^26.6.3",
+    "mocha": "^8.2.1",
     "node-sass": "^5.0.0",
     "nodemon": "^2.0.6",
-    "supertest": "^6.0.1",
-    "ts-jest": "^26.4.4",
+    "nyc": "^15.1.0",
+    "sinon": "^9.2.2",
+    "sinon-chai": "^3.5.0",
     "ts-node": "^9.1.1",
-    "ts-standard": "^10.0.0",
     "typescript": "^4.1.3"
   },
   "nodemonConfig": {
@@ -57,11 +65,5 @@
       "**/*.spec.ts"
     ],
     "exec": "ts-node ./src/server.ts"
-  },
-  "ts-standard": {
-    "ignore": [
-      "dist",
-      "src/views/components/header/header.js"
-    ]
   }
 }
