--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "express": "^4.17.1",
     "govuk-frontend": "^3.10.1",
     "helmet": "^4.2.0",
-    "http-errors": "^1.8.0",
     "ioredis": "^4.19.4",
     "nunjucks": "^3.2.2",
     "validator": "^13.5.2",
@@ -52,6 +51,7 @@
     "nyc": "^15.1.0",
     "sinon": "^9.2.2",
     "sinon-chai": "^3.5.0",
+    "supertest": "^6.0.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
