--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "devDependencies": {
     "@types/chai": "^4.2.14",
     "@types/express": "^4.17.9",
+    "@types/gulp": "^4.0.7",
+    "@types/gulp-sass": "^4.0.0",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.14",
     "@types/nunjucks": "^3.1.3",
