Add sonar exclusions property to exclude directory from being analyzed

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,8 @@ sonar.login=${env.CODE_ANALYSIS_LOGIN}
 sonar.password=${env.CODE_ANALYSIS_PASSWORD}
 
 sonar.sources=src
+sonar.exclusions=**/coverage/**, **/node_modules/**, src/views/*
 sonar.tests=test
-
 sonar.test.inclusions=**/test/**.spec.ts
+
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
