Fix sonar exclusions for views files

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.login=${env.CODE_ANALYSIS_LOGIN}
 sonar.password=${env.CODE_ANALYSIS_PASSWORD}
 
 sonar.sources=src
-sonar.exclusions=**/coverage/**, **/node_modules/**, src/views/*
+sonar.exclusions=**/coverage/**, **/node_modules/**, **/src/views/**
 sonar.tests=test
 sonar.test.inclusions=**/test/**.spec.ts
 
