Add sonar pullrequest base to be main and not master - The branch into which the Pull Request will be merged

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=bankrupt-officer-search-web
+sonar.pullrequest.base=main
 
 sonar.host.url=${env.CODE_ANALYSIS_HOST_URL}
 sonar.login=${env.CODE_ANALYSIS_LOGIN}
