--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=bankrupt-officer-search-web
 sonar.pullrequest.base=main
+sonar.branch.name=main
 
 sonar.host.url=${env.CODE_ANALYSIS_HOST_URL}
 sonar.login=${env.CODE_ANALYSIS_LOGIN}
