--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/app/server.js",
     "start:watch": "NODE_ENV=development nodemon",
-    "build": "NODE_ENV=production tsc && cp -r src/views dist/app && gulp static",
+    "build": "NODE_ENV=production tsc && cp -r src/views dist/app",
     "lint": "eslint 'src/**/*.ts' 'test/**/*.ts'",
     "lint:fix": "eslint 'src/**/*.ts' 'test/**/*.ts' --fix",
     "test": "mocha --file './test/setup.ts' --require ts-node/register './test/**/*.spec.ts'",
@@ -37,8 +37,6 @@
   "devDependencies": {
     "@types/chai": "^4.2.14",
     "@types/express": "^4.17.9",
-    "@types/gulp": "^4.0.7",
-    "@types/gulp-sass": "^4.0.0",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.14",
     "@types/nunjucks": "^3.1.3",
@@ -49,11 +47,8 @@
     "@typescript-eslint/parser": "^4.11.0",
     "chai": "^4.2.0",
     "eslint": "^7.16.0",
-    "gulp": "^4.0.2",
-    "gulp-sass": "^4.1.0",
     "lodash": "^4.17.21",
     "mocha": "^8.2.1",
-    "node-sass": "^5.0.0",
     "nodemon": "^2.0.6",
     "nyc": "^15.1.0",
     "sinon": "^9.2.2",
