--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "bankrupt-officer-search-web",
   "version": "1.0.0",
   "description": "Web application for searching for bankrupt officers",
-  "main": "dist/app/server.js",
+  "main": "dist/app.js",
   "scripts": {
-    "start": "node dist/app/server.js",
+    "start": "npm run build && NODE_ENV=test node dist/app.js",
     "start:watch": "NODE_ENV=development nodemon",
-    "build": "NODE_ENV=production tsc && cp -r src/views dist/app",
+    "build": "gulp build && NODE_ENV=production tsc && cp -r src/views dist/app",
+    "build:init": "gulp copy-descriptors copy-govukfrontend",
+    "build:copy-views": "gulp copy-views",
+    "build:compile": "tsc --project tsconfig.prod.json --outDir dist",
+    "watch": "npm run build:clean && gulp start:watch",
+    "build:clean": "gulp build:clean",
     "lint": "eslint 'src/**/*.ts' 'test/**/*.ts'",
     "lint:fix": "eslint 'src/**/*.ts' 'test/**/*.ts' --fix",
-    "test": "mocha --file './test/setup.ts' --require ts-node/register './test/**/*.spec.ts'",
+    "test": "NODE_ENV=test && mocha --file './test/setup.ts' --require ts-node/register './test/**/*.spec.ts'",
     "test:watch": "mocha --file './test/setup.ts' --require ts-node/register './test/**/*.spec.ts' --watch",
     "test:coverage": "nyc npm test",
     "analyse-code": "sonar-scanner"
@@ -22,7 +27,7 @@
     "@companieshouse/node-session-handler": "^4.1.9",
     "@companieshouse/structured-logging-node": "^1.0.4",
     "axios": "^0.24.0",
-    "cookie-parser": "^1.4.5",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "govuk-frontend": "^4.3.1",
     "helmet": "^4.2.1",
@@ -35,17 +40,24 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.9",
-    "@types/mocha": "^8.2.0",
+    "@types/ioredis": "^4.16.2",
+    "@types/mocha": "^8.2.3",
     "@types/node": "^14.14.35",
     "@types/nunjucks": "^3.1.3",
     "@types/sinon": "^9.0.9",
     "@types/sinon-chai": "^3.2.5",
+    "@types/supertest": "^2.0.12",
     "@types/yargs": "^15.0.12",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
     "chai": "^4.2.0",
+    "del": "^5.1.0",
     "eslint": "^7.16.0",
+    "gulp": "^4.0.2",
+    "gulp-nodemon": "^2.5.0",
+    "gulp-typescript": "^6.0.0-alpha.1",
     "lodash": "^4.17.21",
     "mocha": "^9.1.4",
     "nodemon": "^2.0.20",
