--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "repository": "git@github.com:companieshouse/bankrupt-officer-search-web.git",
   "license": "MIT",
   "dependencies": {
+    "@companieshouse/api-sdk-node": "^2.0.104",
     "@companieshouse/node-session-handler": "^4.1.9",
     "@companieshouse/structured-logging-node": "^1.0.4",
     "axios": "^0.24.0",
@@ -34,7 +35,6 @@
     "ioredis": "^4.19.4",
     "moment": "^2.29.4",
     "nunjucks": "^3.2.4",
-    "private-api-sdk-node": "git+ssh://git@github.com/companieshouse/private-api-sdk-node.git#0.1.80",
     "validator": "^13.7.0",
     "yargs": "^16.2.0"
   },
