--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "repository": "git@github.com:companieshouse/bankrupt-officer-search-web.git",
   "license": "MIT",
   "dependencies": {
-    "@companieshouse/api-sdk-node": "^2.0.104",
+    "@companieshouse/api-sdk-node": "^2.0.105",
     "@companieshouse/node-session-handler": "^4.1.9",
     "@companieshouse/structured-logging-node": "^1.0.4",
     "axios": "^0.24.0",
@@ -33,6 +33,7 @@
     "govuk-frontend": "^4.3.1",
     "helmet": "^4.2.1",
     "ioredis": "^4.19.4",
+    "isarray": "^2.0.5",
     "moment": "^2.29.4",
     "nunjucks": "^3.2.4",
     "validator": "^13.7.0",
@@ -41,7 +42,7 @@
   "devDependencies": {
     "@types/chai": "^4.2.14",
     "@types/cookie-parser": "^1.4.3",
-    "@types/express": "^4.17.9",
+    "@types/express": "^4.17.17",
     "@types/ioredis": "^4.16.2",
     "@types/mocha": "^8.2.3",
     "@types/node": "^14.14.35",
