--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@companieshouse/api-sdk-node": "^2.0.105",
     "@companieshouse/node-session-handler": "^4.1.9",
     "@companieshouse/structured-logging-node": "^1.0.4",
+    "accepts": "^1.3.8",
     "axios": "^0.24.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
