--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Web application for searching for bankrupt officers",
   "main": "dist/app.js",
+  "type": "module",
   "scripts": {
     "start": "npm run build && NODE_ENV=test node dist/app.js",
     "start:watch": "NODE_ENV=development nodemon",
