--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Web application for searching for bankrupt officers",
   "main": "dist/app.js",
-  "type": "module",
   "scripts": {
     "start": "npm run build && NODE_ENV=test node dist/app.js",
     "start:watch": "NODE_ENV=development nodemon",
@@ -38,6 +37,7 @@
     "isarray": "^2.0.5",
     "moment": "^2.29.4",
     "nunjucks": "^3.2.4",
+    "ts-loader": "^9.4.4",
     "validator": "^13.11.0",
     "yargs": "^17.7.2"
   },
