--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "bankrupt-officer-search-web",
   "version": "1.0.0",
   "description": "Web application for searching for bankrupt officers",
-  "main": "dist/app.js",
+  "main": "dist/app/server.js",
   "scripts": {
-    "start": "npm run build && NODE_ENV=test node dist/app.js",
+    "start": "npm run build && NODE_ENV=test node dist/app/server.js",
     "start:watch": "NODE_ENV=development nodemon",
     "build": "gulp build && NODE_ENV=production tsc && cp -r src/views dist/app",
     "build:init": "gulp copy-descriptors copy-govukfrontend",
