--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.5.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "expess": "^0.0.1-security",
     "express": "^4.18.2",
     "govuk-frontend": "^4.7.0",
     "helmet": "^7.0.0",
@@ -73,6 +74,9 @@
     "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "overrides": {
+    "nodemon": "$nodemon"
   },
   "nodemonConfig": {
     "watch": [
