module house keeping

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "nunjucks": "^3.2.4",
     "private-api-sdk-node": "github:companieshouse/private-api-sdk-node#0.1.89",
     "ts-loader": "^9.4.4",
+    "types": "^0.1.1",
     "validator": "^13.11.0",
     "yargs": "^17.7.2"
   },
@@ -47,7 +48,7 @@
     "@types/chai": "^4.3.6",
     "@types/cookie-parser": "^1.4.4",
     "@types/express": "^4.17.17",
-    "@types/ioredis": "^4.28.10",
+    "@types/ioredis": "^5.0.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.5.9",
     "@types/nunjucks": "^3.2.3",
@@ -57,18 +58,16 @@
     "@types/yargs": "^17.0.24",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
-    "path-dirname": "^1.0.2",
     "chai": "^4.3.8",
     "del": "^7.1.0",
     "eslint": "^8.48.0",
     "gulp": "^4.0.2",
     "gulp-nodemon": "^2.5.0",
     "gulp-typescript": "^6.0.0-alpha.1",
-    "lodash": "^4.17.21",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
     "nyc": "^15.1.0",
-    "sinon": "^15.2.0",
+    "sinon": "^16.0.0",
     "sinon-chai": "^3.7.0",
     "sonarqube-scanner": "^3.1.0",
     "supertest": "^6.3.3",
