changing from app to base folder

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "bankrupt-officer-search-web",
   "version": "1.0.0",
   "description": "Web application for searching for bankrupt officers",
-  "main": "dist/app/server.js",
+  "main": "dist/server.js",
   "scripts": {
-    "start": "npm run build && NODE_ENV=test node dist/app/server.js",
+    "start": "npm run build && NODE_ENV=test node dist/server.js",
     "start:watch": "NODE_ENV=development nodemon",
-    "build": "gulp build && NODE_ENV=production tsc && cp -r src/views dist/app",
+    "build": "gulp build && NODE_ENV=production tsc && cp -r src/views dist",
     "build:init": "gulp copy-descriptors copy-govukfrontend",
     "build:copy-views": "gulp copy-views",
     "build:compile": "tsc --project tsconfig.prod.json --outDir dist",
