--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "pretty": true,
     "sourceMap": true,
     "target": "es6",
-    "outDir": "./dist/app",
+    "outDir": "./dist",
     "baseUrl": "./src",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
