--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
   "repository": "git@github.com:companieshouse/bankrupt-officer-search-web.git",
   "license": "MIT",
   "dependencies": {
-    "@companieshouse/api-sdk-node": "^2.0.106",
+    "@companieshouse/api-sdk-node": "^2.0.117",
     "@companieshouse/node-session-handler": "^4.1.9",
     "@companieshouse/structured-logging-node": "^1.0.8",
     "accepts": "^1.3.8",
-    "axios": "^1.5.0",
+    "axios": "^1.5.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
@@ -41,26 +41,24 @@
     "private-api-sdk-node": "github:companieshouse/private-api-sdk-node#0.1.89",
     "ts-loader": "^9.4.4",
     "types": "^0.1.1",
-    "validator": "^13.11.0",
-    "yargs": "^17.7.2"
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.6",
     "@types/cookie-parser": "^1.4.4",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.18",
     "@types/ioredis": "^5.0.0",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^20.5.9",
-    "@types/nunjucks": "^3.2.3",
-    "@types/sinon": "^10.0.16",
-    "@types/sinon-chai": "^3.2.9",
-    "@types/supertest": "^2.0.12",
-    "@types/yargs": "^17.0.24",
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
-    "chai": "^4.3.8",
+    "@types/mocha": "^10.0.2",
+    "@types/node": "^20.8.2",
+    "@types/nunjucks": "^3.2.4",
+    "@types/sinon": "^10.0.18",
+    "@types/sinon-chai": "^3.2.10",
+    "@types/supertest": "^2.0.14",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "chai": "^4.3.10",
     "del": "^7.1.0",
-    "eslint": "^8.48.0",
+    "eslint": "^8.50.0",
     "gulp": "^4.0.2",
     "gulp-nodemon": "^2.5.0",
     "gulp-typescript": "^6.0.0-alpha.1",
