feat: upgrade changes for v20

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,13 @@
 *
 !dist
-!src
-!static
+!docker_start.sh
 !gulpfile.mjs
+!node_modules
 !package.json
 !package-lock.json
+!src
+!start-ecs
+!static
 !tsconfig.json
 !tsconfig.prod.json
-!docker_start.sh
-!routes.yaml
 !views
-!start-ecs
