--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=bankrupt-officer-search-web
+sonar.projectKey=uk.gov.companieshouse:bankrupt-officer-search-web
 
 sonar.host.url=${env.CODE_ANALYSIS_HOST_URL}
 sonar.token=${env.CODE_ANALYSIS_TOKEN}
